--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 .bg-image{
-  background-image: url('img/hostel-rgu.101.jpeg');
+  background-image: url('img/377dd3be-54b4-4aa6-b165-f81e19c31a38.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
